@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Enable spells to consume items to be cast.
+Nicolas Weeger 2010-01-24
+
 When talked to, NPCs now stay still a few ticks before moving - only if random movement.
 Nicolas Weeger 2010-01-24
 
